--- a/vignettes/Replicate_Biased_Drift_Science.Rmd
+++ b/vignettes/Replicate_Biased_Drift_Science.Rmd
@@ -4,7 +4,7 @@ author: "Ed Morrissey"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Replicate_crypt_drift_paper}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
